--- a/packages/identity/package.json
+++ b/packages/identity/package.json
@@ -4,22 +4,26 @@
   "description": "Library for managing identities for Semaphore and RLN protocols.",
   "license": "MIT",
   "main": "dist/index.node.js",
-  "types": "dist/types/index.d.ts",
   "exports": {
     "import": "./dist/index.mjs",
     "require": "./dist/index.node.js"
   },
+  "types": "dist/types/index.d.ts",
+  "files": [
+    "dist/",
+    "src/",
+    "README.md"
+  ],
   "repository": "https://github.com/appliedzkp/zk-kit",
   "homepage": "https://github.com/appliedzkp/zk-kit/tree/main/packages/identity",
+  "author": {
+    "name": "Andrija Novakovic",
+    "email": "akinovak@gmail.com"
+  },
   "scripts": {
     "build:watch": "rollup -c rollup.config.ts -w --configPlugin typescript",
     "build": "rimraf dist && rollup -c rollup.config.ts --configPlugin typescript",
     "prepublishOnly": "yarn build"
-  },
-  "keywords": [],
-  "author": {
-    "name": "Andrija Novakovic",
-    "email": "akinovak@gmail.com"
   },
   "publishConfig": {
     "access": "public"
