--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -11,7 +11,7 @@
   ],
   "parser": "@typescript-eslint/parser",
   "plugins": ["@typescript-eslint"],
-  "ignorePatterns": ["node_modules", "dist", "build", "types"],
+  "ignorePatterns": ["node_modules", "dist", "build", "types", "target"],
   "rules": {
     "@typescript-eslint/no-explicit-any": "off"
   }
