integrate new merkle tree with existsing protocols & standardize one  on merkle proof type
Former-commit-id: 40036082ca7ba1be1c46e7e3f3bf3aab7d7e181c [formerly 187d3dc95b5e7aa04de700d4527e3a341933bad1] [formerly de3c9e4a28b2db75123ca358b13b281ac44f1722 [formerly 72f4455ddbc0ae84278caf262c2fd23fb4f07794]]
Former-commit-id: 46c8148ef6a6a94457ed991fde2064d4caa85df2 [formerly 94ebdb995dd623b1c123a5e249e5df0566912b49]
Former-commit-id: 55066d6ad404529a476464a6dff83947433392d9

--- a/packages/protocols/package.json
+++ b/packages/protocols/package.json
@@ -33,6 +33,7 @@
     "rollup-plugin-cleanup": "^3.2.1"
   },
   "dependencies": {
+    "@zk-kit/incremental-merkle-tree": "^0.1.0",
     "circomlibjs": "^0.0.8",
     "ethers": "^5.4.7",
     "incrementalquintree": "^1.0.7",
