--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -4,15 +4,41 @@
     "es6": true
   },
   "extends": [
-    "eslint:recommended",
-    "plugin:@typescript-eslint/eslint-recommended",
-    "plugin:@typescript-eslint/recommended",
+    "airbnb",
+    "airbnb/hooks",
+    "airbnb-typescript",
+    "plugin:jest/recommended",
+    "plugin:jest/style",
     "prettier"
   ],
   "parser": "@typescript-eslint/parser",
-  "plugins": ["@typescript-eslint"],
-  "ignorePatterns": ["node_modules", "dist", "build", "types", "target"],
+  "parserOptions": {
+    "ecmaVersion": 6,
+    "sourceType": "module",
+    "project": ["./tsconfig.json", "./packages/**/tsconfig.json"]
+  },
+  "plugins": ["@typescript-eslint", "jest"],
+  "ignorePatterns": ["node_modules", "dist", "build", "types", "benchmark", "target", "witness_calculator.js"],
   "rules": {
-    "@typescript-eslint/no-explicit-any": "off"
+    "no-console": ["warn", { "allow": ["info", "warn", "error"] }],
+    "no-restricted-syntax": "off",
+    "no-underscore-dangle": "off",
+    "no-param-reassign": "off",
+    "import/no-cycle": "off",
+    "no-bitwise": "off",
+    "class-methods-use-this": "warn",
+    "import/no-extraneous-dependencies": "off",
+    "@typescript-eslint/no-loop-func": "off",
+    "@typescript-eslint/no-shadow": "off",
+    "@typescript-eslint/no-explicit-any": "off",
+    "@typescript-eslint/lines-between-class-members": "off",
+    "@typescript-eslint/naming-convention": [
+      "error",
+      {
+        "selector": "variable",
+        "format": ["camelCase", "PascalCase", "UPPER_CASE", "snake_case"],
+        "leadingUnderscore": "allow"
+      }
+    ]
   }
 }
