--- a/packages/incremental-merkle-tree/package.json
+++ b/packages/incremental-merkle-tree/package.json
@@ -35,6 +35,7 @@
   },
   "devDependencies": {
     "@rollup/plugin-typescript": "^8.3.0",
+    "benny": "^3.7.1",
     "circomlibjs": "^0.0.8",
     "incrementalquintree": "^1.0.9",
     "rollup-plugin-cleanup": "^3.2.1",
