--- a/packages/protocols/package.json
+++ b/packages/protocols/package.json
@@ -37,6 +37,7 @@
     "@zk-kit/incremental-merkle-tree": "^0.2.0",
     "circomlibjs": "^0.0.8",
     "ethers": "^5.4.7",
+    "ffjavascript": "^0.2.46",
     "incrementalquintree": "^1.0.7",
     "snarkjs": "^0.4.10"
   }
