--- a/packages/rollup-plugin-rust/demo/package.json
+++ b/packages/rollup-plugin-rust/demo/package.json
@@ -31,9 +31,7 @@
     "prepublishOnly": "yarn build"
   },
   "devDependencies": {
-    "@zkit/rollup-plugin-rust": "../",
     "rimraf": "^3.0.2",
-    "rollup": "^1.31.0",
-    "rollup-plugin-terser": "^7.0.2"
+    "rollup": "^1.31.0"
   }
 }
