chore: set correct ffjavascript & circomlibjs versions
Former-commit-id: f15439e30c9a117ee5ae6e81e07a7bd9cb7140c7 [formerly 21d0032b805744e1fef9c2e20c59e911b61d7ed2] [formerly daac645eed7c41ffccb1d78d0522e95d36b08bdf [formerly 793cf951612850151be0909b5b7da606f97b5cdf]]
Former-commit-id: 584c004f368a57316a49f7961f0bef5d808ea50c [formerly 786b4bf782142781bfded143e96c7918243b93b7]
Former-commit-id: 2d3839a0c3c35161bb70f1d1ac128f037c518083

--- a/packages/protocols/package.json
+++ b/packages/protocols/package.json
@@ -35,9 +35,9 @@
   },
   "dependencies": {
     "@zk-kit/incremental-merkle-tree": "^0.2.0",
-    "circomlibjs": "^0.0.8",
+    "circomlibjs": "0.0.8",
     "ethers": "^5.4.7",
-    "ffjavascript": "^0.2.46",
+    "ffjavascript": "0.2.38",
     "incrementalquintree": "^1.0.7",
     "snarkjs": "^0.4.10"
   }
