--- a/packages/identity/package.json
+++ b/packages/identity/package.json
@@ -33,10 +33,10 @@
     "rollup-plugin-cleanup": "^3.2.1"
   },
   "dependencies": {
+    "@ethersproject/random": "^5.5.1",
     "bigint-conversion": "^2.1.12",
-    "circomlibjs": "^0.0.8",
-    "crypto": "^1.0.1",
-    "ffjavascript": "^0.2.46",
+    "circomlibjs": "0.0.8",
+    "ffjavascript": "0.2.38",
     "js-sha256": "^0.9.0"
   }
 }
