--- a/packages/incremental-merkle-tree/package.json
+++ b/packages/incremental-merkle-tree/package.json
@@ -28,7 +28,8 @@
     "benchmark": "node -r ts-node/register benchmarks/index.ts",
     "build:watch": "rollup -c rollup.config.ts -w --configPlugin typescript",
     "build": "rimraf dist && rollup -c rollup.config.ts --configPlugin typescript",
-    "prepublishOnly": "yarn build"
+    "prepublishOnly": "yarn build",
+    "docs": "typedoc src/index.ts --out ../../docs/incremental-merkle-tree"
   },
   "publishConfig": {
     "access": "public"
@@ -39,6 +40,7 @@
     "circomlibjs": "^0.0.8",
     "incrementalquintree": "^1.0.9",
     "rollup-plugin-cleanup": "^3.2.1",
-    "rollup-plugin-terser": "^7.0.2"
+    "rollup-plugin-terser": "^7.0.2",
+    "typedoc": "^0.22.11"
   }
 }
