--- a/packages/sparse-merkle-tree/package.json
+++ b/packages/sparse-merkle-tree/package.json
@@ -33,7 +33,7 @@
     "build:watch": "rollup -c rollup.config.ts -w --configPlugin typescript",
     "build": "rimraf dist && rollup -c rollup.config.ts --configPlugin typescript",
     "prepublishOnly": "yarn build",
-    "docs": "rimraf docs && typedoc src/index.ts"
+    "docs": "typedoc src/index.ts --out ../../docs/sparse-merkle-tree"
   },
   "publishConfig": {
     "access": "public"
@@ -44,6 +44,6 @@
     "js-sha256": "^0.9.0",
     "rollup-plugin-cleanup": "^3.2.1",
     "rollup-plugin-terser": "^7.0.2",
-    "typedoc": "^0.20.32"
+    "typedoc": "^0.22.11"
   }
 }
