feat: create zk-kit website
Former-commit-id: 43433edd9a20fad2d63a58d9518b0fd8caaaac5c [formerly d0523c8db3fec2ffe6d50208b02ad16d73df74cf] [formerly c8415b4acca8efafe59694ce4ca8d51c620a3bee [formerly 3572ebb419abecca795969f0dc6da64b9ca85b96]]
Former-commit-id: 42cfc06ebd6bc9738098943f2ee9e9ffb79ee30e [formerly abf2ed520018cbb389d34d02a72adf02e734b10d]
Former-commit-id: 68072a66ad07489fa79afaaa5b7c2b7f4a9efec4

--- a/.gitignore
+++ b/.gitignore
@@ -44,9 +44,9 @@ node_modules/
 # Generate output
 dist
 build
-docs
-gh-pages/*
-!gh-pages/CNAME
+docs/*
+!docs/CNAME
+!docs/index.html
 
 # dotenv environment variables file
 .env
