chore: add identity as interdependency package
Former-commit-id: 5937438f4a65e0185b4549ef8092a50f9d819769 [formerly 2f0731ba9c773b25a79922e83d54d5062bd8b3f4] [formerly 232a7c73f93bccb08319b1383e859d4216732f37 [formerly cd09ed69aeb3f2593f4cafd5408b3e9b5563f5e4]]
Former-commit-id: fa5b7245b0aa272855bb7084ad62f612f223cfd6 [formerly 9a2d49364cf48a3a2da2c0bedba550b47ef57117]
Former-commit-id: f99c8d4c81be8c35abb1891000b3403a4d734458

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -13,7 +13,8 @@
     "declarationDir": "types",
     "typeRoots": ["node_modules/@types", "types"],
     "paths": {
-      "@zk-kit/types": ["types/zk-kit"]
+      "@zk-kit/types": ["types/zk-kit"],
+      "@zk-kit/identity": ["packages/identity/src"]
     }
   },
   "ts-node": {
