chore(eslint): ignore docs folder
Former-commit-id: 0518397adc43f9aaebadf7a9d8550b9c4504322d [formerly dee6da0b78d14e7eb15a88705eb2139a65d3b403] [formerly b56e7ed57befd65134cf85c1d5182a074bc7905b [formerly 3df0b39d823c1fe984d8ad203f94a30c6ba40c10]]
Former-commit-id: 53dccbef4402c30934aeffcde1162c4c89ea599c [formerly bee65619205f9a904028914b5cdf20fa45120a36]
Former-commit-id: f257b0a23b07b30a9739cfdfd88d566113cafdfd

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -18,7 +18,7 @@
     "project": ["./tsconfig.json", "./packages/**/tsconfig.json"]
   },
   "plugins": ["@typescript-eslint", "jest"],
-  "ignorePatterns": ["node_modules", "dist", "build", "types", "benchmark", "target", "witness_calculator.js"],
+  "ignorePatterns": ["node_modules", "dist", "build", "types", "docs", "benchmark", "target", "witness_calculator.js"],
   "rules": {
     "no-console": ["warn", { "allow": ["info", "warn", "error"] }],
     "no-restricted-syntax": "off",
