chore: set tsconfig paths for all zk-kit packages
Former-commit-id: 92f063bf3794f022233565633299610938e62e09 [formerly 9fb0532beafe80f1591bd9aa3b083dfd55469611] [formerly 3b14775151319fe357ebbe82a4931f85c15a3bbd [formerly 87dbdfb166eda92f30b1bd882035a87986ab33af]]
Former-commit-id: 28a49fe4119f800a610d6a1c0315baf31f598fe0 [formerly 346fea95b7b9f2d17c928a5019cbcfb664b0fdfc]
Former-commit-id: 65d03434f0522b0ef27ef74ef456099e4db9309a

--- a/packages/protocols/build.tsconfig.json
+++ b/packages/protocols/build.tsconfig.json
@@ -1,7 +1,9 @@
 {
   "extends": "../../tsconfig.json",
   "compilerOptions": {
-    "declarationDir": "types"
+    "allowJs": true,
+    "declarationDir": "types",
+    "paths": {}
   },
   "include": ["src"]
 }
