--- a/packages/incremental-merkle-tree/build.tsconfig.json
+++ b/packages/incremental-merkle-tree/build.tsconfig.json
@@ -1,7 +1,8 @@
 {
   "extends": "../../tsconfig.json",
   "compilerOptions": {
-    "declarationDir": "types"
+    "declarationDir": "types",
+    "paths": {}
   },
   "include": ["src"]
 }
