--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "lint:fix": "eslint . --ext .js,.jsx,.ts,.tsx --fix",
     "prettier": "prettier -c .",
     "prettier:fix": "prettier -w .",
+    "benchmarks": "rimraf benchmarks/results && ts-node benchmarks/index.ts",
     "publish:fp": "lerna publish from-package",
     "docs": "lerna run docs",
     "clean": "lerna clean",
@@ -44,12 +45,15 @@
     "@typescript-eslint/eslint-plugin": "^5.9.1",
     "@typescript-eslint/parser": "^5.9.1",
     "babel-jest": "^27.4.6",
+    "benny": "^3.7.1",
     "commitizen": "^4.2.4",
+    "circomlibjs": "^0.0.8",
     "cz-conventional-changelog": "^3.3.0",
     "eslint": "^8.7.0",
     "eslint-config-prettier": "^8.3.0",
     "eslint-plugin-react": "^7.28.0",
     "eslint-plugin-react-hooks": "^4.3.0",
+    "incrementalquintree": "^1.0.9",
     "jest": "^27.4.1",
     "jest-config": "^27.4.7",
     "lerna": "^4.0.0",
