build(ts): add zk-kit types path on build tsconfigs
Former-commit-id: 646f4f71a223d22ed0bf0119edd13a1d98d59b39 [formerly fe290e7847a12af90ec3bda31715f855408b05a9] [formerly 3d25a852e9c1848cfc2ccdd6ddbd9a9c3dd47ddf [formerly 9f930764ab3ff48686e89060db49c8ed38bbcada]] [formerly 159c11c051f0beb6247016a6b2f9f81b23a88e6e [formerly 0ffc887122e0bc6c826412302687331180c5b8dc] [formerly b52fd0cff4370692dda613988b31e0c993c9b593 [formerly bd48b104743eacdf1471d26177cceb78c314af96]]]
Former-commit-id: 140d2048207d1f13076b0a5daa57ebb1fcffdbbf [formerly d28b41fa99920eef151f344b406fd39aff5b889f] [formerly a5bd3cda7c160ffd3657f8b8ff79e6c5d21344af [formerly 32860b344803c0900a8b939951402b76f55b1f4c]]
Former-commit-id: f230562806bc73f2e597cb50e07212a2f6557aef [formerly a4af48f4d3c4de94e2356c16d1e55fe30c9270d2]
Former-commit-id: 9f4c66f9cb674eff7c00142652f807bfa4f7da79

--- a/packages/identity/build.tsconfig.json
+++ b/packages/identity/build.tsconfig.json
@@ -2,7 +2,9 @@
   "extends": "../../tsconfig.json",
   "compilerOptions": {
     "declarationDir": "types",
-    "paths": {}
+    "paths": {
+      "@zk-kit/types": ["types/zk-kit"]
+    }
   },
   "include": ["src"]
 }
