--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -20,3 +20,8 @@ jobs:
 
       - run: yarn --frozen-lockfile
       - run: yarn test:prod
+
+      - name: Coveralls
+        uses: coverallsapp/github-action@master
+        with:
+          github-token: ${{ secrets.GITHUB_TOKEN }}
