docs: create README and update pkg description
Former-commit-id: 42de21952673b5221ced57230f1a357c843f49b0 [formerly c7d18dae0f1ea319c1482fdd05b554a19e8b7586] [formerly 22325bdd727282d1f0f5356100947d3030b1a00a [formerly ab434694c8cc2ee02e5d559c698a246e7f860266]] [formerly 8ee5c7f1d4e5a70008fd83cb9052ed8163b43dc6 [formerly c085d616d6b4b045b8ecce411ee4c5f3a779b88b] [formerly 45b43cbbd5e8dfd648e5094e39b473a7d38bef56 [formerly 98a9c9c56a7358f04abb1cb26f5e37ef0a7389e8]]]
Former-commit-id: 0d1faa8f97163a2d3984ca4859e70b3ce67ed966 [formerly 8408f508097220d324e1a6769a0bd4aa06f8b2a0] [formerly 8bb5d422c3ade1a4c7741fb083fc23e6c6a2e39d [formerly 5fc39c80b6cf7757b8e0f9a03c693c5819067eb7]]
Former-commit-id: 365f30d7665284c6b0269c535fd64401010213b9 [formerly 1a25686e2549819d08cf7344de5c1a81770d2504]
Former-commit-id: 9930f2ebd01dc255f4e13c8dd67d1867af73f892

--- a/packages/rollup-plugin-rust/package.json
+++ b/packages/rollup-plugin-rust/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@zk-kit/rollup-plugin-rust",
   "version": "0.1.0",
-  "description": "Rollup plugin for bundling and importing Rust crates with WASM.",
+  "description": "Rollup plugin to create WASM/JS libraries from Rust crates.",
   "license": "MIT",
   "main": "dist/index.node.js",
   "exports": {
