chore: add npm access option
Former-commit-id: 1c4c6510499b2aece79429327901d5217ff13769 [formerly a666b4d2c20cf00ed0ff9749cf1637b47dd310d1] [formerly aff8d6380e5625308942f2763a61dead1e3ed216 [formerly 5a65f49607ef7a22e2580de62b9c35cf71a52b69]] [formerly 2e499d9765467406c1b297d241658f80e3694ab2 [formerly d615f0af1f97c5525880b2691d6e77002312a561] [formerly a9bba862ad18aa076d9326cea52bdb47d64b32bb [formerly 9ceeb703d370ac324d8f805da9e83b3eb13a79bf]]]
Former-commit-id: a181cae99d9dc4e154b250e369f662788e08a366 [formerly 01a94cef7220fce97507eb7a5861ee6099280d0b] [formerly 024498e41fd64169f0afbfcc2f5689da6c0ccdee [formerly 8e078e13f552cd09565d201e314285074665a5e6]]
Former-commit-id: 4584b33e50aac9ed0eeafa23f45d8598a7ec9cc6 [formerly 1971c64ce616615c6e724538cf5f3ae8ece79ea8]
Former-commit-id: 9a44c95ea95b68b1ecadfec79d3bed7e47dd143b

--- a/packages/incremental-merkle-tree.sol/package.json
+++ b/packages/incremental-merkle-tree.sol/package.json
@@ -35,6 +35,9 @@
     "test:prod": "yarn lint && yarn coverage",
     "lint": "solhint 'contracts/**/*.sol'"
   },
+  "publishConfig": {
+    "access": "public"
+  },
   "devDependencies": {
     "@nomiclabs/hardhat-ethers": "^2.0.4",
     "@nomiclabs/hardhat-waffle": "^2.0.2",
@@ -70,5 +73,6 @@
         "typechain": "./build/typechain"
       }
     }
-  }
+  },
+  "gitHead": "115574561dcd7692d2edc5f3e16b90536a5b55cd"
 }
