--- a/packages/incremental-merkle-tree.sol/package.json
+++ b/packages/incremental-merkle-tree.sol/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@zk-kit/incremental-merkle-tree.sol",
   "version": "0.2.0",
-  "description": "Incremental Merkle tree smart contracts.",
+  "description": "Incremental Merkle tree Solidity libraries.",
   "license": "MIT",
   "files": [
     "contracts/",
