refactor: move shared types to specific packages
Former-commit-id: 1531097480e86ddd945274fc6c5c20e1abf3a6ba [formerly b3d5d58e7ce8e7b63b2c3ec85e752d874269924f] [formerly 68e161683fdcc1d1507368fe6c211348a51612e7 [formerly 9dfe19cb76309566bb31d8b347ea26936df62794]] [formerly 85f52a7d2b2b389a3b2644d75bdbe29c8dbf1de6 [formerly 71920a40c6c93e38c82e6fb055dbe9dea8eaabf9] [formerly 877d8f05e21ed098ce1422560f84a44ffd8fd116 [formerly 730ae24937ed6ab5424c6294ee9793c8e7768a43]]]
Former-commit-id: 8f0e5690363991d39e0cde89f70057c091b0218d [formerly 4d75bed743fc74380ee84f256aae1450140b024f] [formerly 181585f12d46927af1925cd74ef93388d6e1f501 [formerly 62a097ff58328f681e0f1845b9a6d360256edb32]]
Former-commit-id: 1c66bb97a7992039896f19efe89f3b920c620f1b [formerly a533090866f2b6e8f76435936cc726d9a73e0d2a]
Former-commit-id: fa56db34e54b1ace5c8a7e3b7549cb592d4f48dc

--- a/packages/identity/build.tsconfig.json
+++ b/packages/identity/build.tsconfig.json
@@ -1,10 +1,7 @@
 {
   "extends": "../../tsconfig.json",
   "compilerOptions": {
-    "declarationDir": "types",
-    "paths": {
-      "@zk-kit/types": ["types/zk-kit"]
-    }
+    "declarationDir": "types"
   },
   "include": ["src"]
 }
