--- a/packages/incremental-merkle-tree/build.tsconfig.json
+++ b/packages/incremental-merkle-tree/build.tsconfig.json
@@ -1,10 +1,7 @@
 {
   "extends": "../../tsconfig.json",
   "compilerOptions": {
-    "declarationDir": "types",
-    "paths": {
-      "@zk-kit/types": ["types/zk-kit"]
-    }
+    "declarationDir": "types"
   },
   "include": ["src"]
 }
