build(rollup): replace typescript plugin

--- a/packages/protocols/build.tsconfig.json
+++ b/packages/protocols/build.tsconfig.json
@@ -1,8 +1,9 @@
 {
   "extends": "../../tsconfig.json",
   "compilerOptions": {
-    "allowJs": true,
-    "declarationDir": "types"
+    "baseUrl": ".",
+    "declarationDir": "dist/types",
+    "allowJs": true
   },
   "include": ["src"]
 }
