--- a/packages/protocols/package.json
+++ b/packages/protocols/package.json
@@ -30,15 +30,15 @@
     "access": "public"
   },
   "devDependencies": {
-    "@rollup/plugin-typescript": "^8.3.0",
     "rollup-plugin-cleanup": "^3.2.1",
+    "rollup-plugin-typescript2": "^0.31.2",
     "typedoc": "^0.22.11"
   },
   "dependencies": {
-    "@zk-kit/incremental-merkle-tree": "^0.4.2",
     "@ethersproject/bytes": "^5.5.0",
     "@ethersproject/solidity": "^5.5.0",
     "@ethersproject/strings": "^5.5.0",
+    "@zk-kit/incremental-merkle-tree": "^0.4.2",
     "circomlibjs": "0.0.8",
     "ffjavascript": "0.2.38",
     "snarkjs": "^0.4.12"
