--- a/packages/identity/package.json
+++ b/packages/identity/package.json
@@ -35,8 +35,8 @@
     "typedoc": "^0.22.11"
   },
   "dependencies": {
+    "@ethersproject/bignumber": "^5.5.0",
     "@ethersproject/random": "^5.5.1",
-    "bigint-conversion": "^2.1.12",
     "circomlibjs": "0.0.8",
     "ffjavascript": "0.2.38",
     "js-sha256": "^0.9.0"
