--- a/packages/identity/package.json
+++ b/packages/identity/package.json
@@ -31,6 +31,7 @@
   },
   "devDependencies": {
     "@rollup/plugin-typescript": "^8.3.0",
+    "@types/crypto-js": "^4.1.1",
     "rollup-plugin-cleanup": "^3.2.1",
     "typedoc": "^0.22.11"
   },
@@ -38,6 +39,6 @@
     "@ethersproject/bignumber": "^5.5.0",
     "@ethersproject/random": "^5.5.1",
     "circomlibjs": "0.0.8",
-    "js-sha256": "^0.9.0"
+    "crypto-js": "^4.1.1"
   }
 }
