--- a/packages/sparse-merkle-tree/package.json
+++ b/packages/sparse-merkle-tree/package.json
@@ -41,7 +41,8 @@
   "devDependencies": {
     "@rollup/plugin-typescript": "^8.3.0",
     "circomlibjs": "^0.0.8",
-    "js-sha256": "^0.9.0",
+    "crypto-js": "^4.1.1",
+    "@types/crypto-js": "^4.1.1",
     "rollup-plugin-cleanup": "^3.2.1",
     "rollup-plugin-terser": "^7.0.2",
     "typedoc": "^0.22.11"
