chore: update repo links
Former-commit-id: bca796e21537a54520345be5df23187230526952 [formerly d822e266261170e14a65b246bc344eda18e532d4] [formerly 0e92e1675c83c24cf72f41194fbad1d3ebbc3344 [formerly 234c6e6a65a2b05160310f3652444b9762cae6a3]] [formerly 94b27708b5f4b77cd0abe8686eb94735f72e69bd [formerly 737d6449ad67619c77fa1095685dce051dda9c60] [formerly 3fbc32a4fad5588bb65619b037c5b96273db9a29 [formerly 147c8cc74dd81a50c212d3b5895864a7d7540b54]]]
Former-commit-id: 393573e30f5e97f22500c4cb56a25cebea8153b5 [formerly 630b921ea3ef0da1f4968894c7229ec99a6a1b21] [formerly 7911d66aca96b73347fbe789c59beac786d0d76f [formerly 86abe30e2244e2378f57590b7d6dbb273a1af169]]
Former-commit-id: a0062cc791939ccbde16719697100964ceeb62b0 [formerly 8f173bac7761d2843af24c6f56d31b5354b21fee]
Former-commit-id: 7de06b25788f5f6a4e4fc43081219ee2569b2a13

--- a/package.json
+++ b/package.json
@@ -2,9 +2,9 @@
   "name": "zk-kit",
   "description": "A monorepo of reusable JS libraries for zero-knowledge technologies.",
   "license": "MIT",
-  "repository": "git@github.com:appliedzkp/zk-kit.git",
-  "homepage": "https://github.com/appliedzkp/zk-kit",
-  "bugs": "https://github.com/appliedzkp/zk-kit/issues",
+  "repository": "git@github.com:privacy-scaling-explorations/zk-kit.git",
+  "homepage": "https://github.com/privacy-scaling-explorations/zk-kit",
+  "bugs": "https://github.com/privacy-scaling-explorations/zk-kit/issues",
   "private": true,
   "scripts": {
     "install": "yarn bootstrap && yarn build",
