--- a/.gitignore
+++ b/.gitignore
@@ -73,13 +73,14 @@ cache
 .npm
 .DS_Store
 
-# yarn v2
-.yarn/cache
-.yarn/unplugged
-.yarn/build-state.yml
-.yarn/install-state.gz
+# yarn v3
 .pnp.*
+.yarn/*
+!.yarn/patches
+!.yarn/plugins
+!.yarn/releases
+!.yarn/sdks
+!.yarn/versions
 
 # Other
 benchmarks/results
-zkeyFiles
