--- a/package.json
+++ b/package.json
@@ -7,21 +7,15 @@
   "bugs": "https://github.com/privacy-scaling-explorations/zk-kit/issues",
   "private": true,
   "scripts": {
-    "install": "yarn bootstrap && yarn build",
-    "bootstrap": "lerna bootstrap",
-    "build": "lerna run build",
-    "build:watch": "lerna run --parallel build:watch -- -- --watch",
+    "build": "yarn workspaces foreach run build",
     "test": "jest --coverage",
     "test:watch": "jest --coverage --watch",
-    "test:prod": "yarn lint && yarn test && lerna run test",
-    "lint": "eslint . --ext .js,.jsx,.ts,.tsx",
-    "lint:fix": "eslint . --ext .js,.jsx,.ts,.tsx --fix",
+    "test:all": "yarn workspaces foreach run test",
+    "lint": "eslint . --ext .js,.ts",
     "prettier": "prettier -c .",
-    "prettier:fix": "prettier -w .",
+    "prettier:write": "prettier -w .",
     "benchmarks": "rimraf benchmarks/results && ts-node benchmarks/index.ts",
-    "publish:fp": "lerna publish from-package",
-    "docs": "lerna run docs",
-    "clean": "lerna clean",
+    "docs": "yarn workspaces foreach run docs",
     "commit": "cz",
     "precommit": "lint-staged"
   },
@@ -33,10 +27,14 @@
     "zk-snarks",
     "circom"
   ],
+  "workspaces": [
+    "packages/*"
+  ],
+  "packageManager": "yarn@3.2.1",
   "devDependencies": {
     "@babel/core": "^7.16.7",
     "@babel/preset-env": "^7.16.8",
-    "@babel/preset-typescript": "^7.16.7",
+    "@babel/preset-typescript": "^7.17.12",
     "@commitlint/cli": "^16.0.2",
     "@commitlint/config-conventional": "^16.0.0",
     "@rollup/plugin-typescript": "^8.3.0",
@@ -51,19 +49,15 @@
     "circomlibjs": "^0.0.8",
     "commitizen": "^4.2.4",
     "cz-conventional-changelog": "^3.3.0",
-    "eslint": "^8.7.0",
-    "eslint-config-airbnb": "^19.0.4",
+    "eslint": "^8.2.0",
+    "eslint-config-airbnb-base": "15.0.0",
     "eslint-config-airbnb-typescript": "^16.1.0",
     "eslint-config-prettier": "^8.3.0",
-    "eslint-plugin-import": "^2.25.4",
+    "eslint-plugin-import": "^2.25.2",
     "eslint-plugin-jest": "^25.7.0",
-    "eslint-plugin-jsx-a11y": "^6.5.1",
-    "eslint-plugin-react": "^7.28.0",
-    "eslint-plugin-react-hooks": "^4.3.0",
     "incrementalquintree": "^1.0.9",
     "jest": "^27.4.1",
     "jest-config": "^27.4.7",
-    "lerna": "^4.0.0",
     "lint-staged": "^12.1.7",
     "prettier": "^2.5.1",
     "rimraf": "^3.0.2",
