--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -3,14 +3,7 @@
   "env": {
     "es6": true
   },
-  "extends": [
-    "airbnb",
-    "airbnb/hooks",
-    "airbnb-typescript",
-    "plugin:jest/recommended",
-    "plugin:jest/style",
-    "prettier"
-  ],
+  "extends": ["airbnb-base", "airbnb-typescript/base", "plugin:jest/recommended", "plugin:jest/style", "prettier"],
   "parser": "@typescript-eslint/parser",
   "parserOptions": {
     "ecmaVersion": 6,
