ci: update workflows

--- a/.github/workflows/coverall.yml
+++ b/.github/workflows/coverall.yml
@@ -1,13 +1,12 @@
-name: test
+name: coverall
 
 on:
-    pull_request:
     push:
         branches:
             - main
 
 jobs:
-    test:
+    coverall:
         runs-on: ubuntu-latest
 
         steps:
@@ -34,5 +33,10 @@ jobs:
             - name: Install dependencies
               run: yarn
 
-            - name: Test libraries and contracts
-              run: yarn test:all
+            - name: Test libraries
+              run: yarn test
+
+            - name: Coveralls
+              uses: coverallsapp/github-action@master
+              with:
+                  github-token: ${{ secrets.GITHUB_TOKEN }}
