--- a/.github/workflows/docs.yml
+++ b/.github/workflows/docs.yml
@@ -12,15 +12,31 @@ jobs:
         steps:
             - uses: actions/checkout@v2
 
-            - name: Use Node.js 16.x
+            - name: Install Node.js
               uses: actions/setup-node@v1
               with:
                   node-version: 16.x
 
-            - run: yarn --frozen-lockfile
-            - run: yarn docs
+            - name: Get yarn cache directory path
+              id: yarn-cache-dir-path
+              run: echo "::set-output name=dir::$(yarn config get cacheFolder)"
 
-            - name: Github Pages
+            - name: Restore yarn cache
+              uses: actions/cache@v3
+              id: yarn-cache
+              with:
+                  path: ${{ steps.yarn-cache-dir-path.outputs.dir }}
+                  key: ${{ runner.os }}-yarn-${{ hashFiles('**/yarn.lock') }}
+                  restore-keys: |
+                      ${{ runner.os }}-yarn-
+
+            - name: Install dependencies
+              run: yarn
+
+            - name: Generate doc website
+              run: yarn docs
+
+            - name: Publish on Github Pages
               uses: crazy-max/ghaction-github-pages@v2.5.0
               with:
                   build_dir: docs
