--- a/.github/workflows/style.yml
+++ b/.github/workflows/style.yml
@@ -1,4 +1,4 @@
-name: test
+name: style
 
 on:
     pull_request:
@@ -7,7 +7,7 @@ on:
             - main
 
 jobs:
-    test:
+    style:
         runs-on: ubuntu-latest
 
         steps:
@@ -34,5 +34,11 @@ jobs:
             - name: Install dependencies
               run: yarn
 
-            - name: Test libraries and contracts
-              run: yarn test:all
+            - name: Run Prettier
+              run: yarn prettier
+
+            - name: Run Eslint
+              run: yarn lint
+
+            - name: Build libraries
+              run: yarn build
