--- a/packages/sparse-merkle-tree/build.tsconfig.json
+++ b/packages/sparse-merkle-tree/build.tsconfig.json
@@ -1,7 +1,8 @@
 {
     "extends": "../../tsconfig.json",
     "compilerOptions": {
-        "declarationDir": "types"
+        "baseUrl": ".",
+        "declarationDir": "dist/types"
     },
     "include": ["src"]
 }
