--- a/packages/sparse-merkle-tree/package.json
+++ b/packages/sparse-merkle-tree/package.json
@@ -39,12 +39,12 @@
         "access": "public"
     },
     "devDependencies": {
-        "@rollup/plugin-typescript": "^8.3.0",
         "@types/crypto-js": "^4.1.1",
         "circomlibjs": "^0.0.8",
         "crypto-js": "^4.1.1",
         "rollup-plugin-cleanup": "^3.2.1",
         "rollup-plugin-terser": "^7.0.2",
+        "rollup-plugin-typescript2": "^0.32.1",
         "typedoc": "^0.22.11"
     }
 }
