--- a/packages/incremental-merkle-tree.sol/contracts/package.json
+++ b/packages/incremental-merkle-tree.sol/contracts/package.json
@@ -21,7 +21,7 @@
     "repository": "git@github.com:privacy-scaling-explorations/zk-kit.git",
     "homepage": "https://github.com/privacy-scaling-explorations/zk-kit/tree/main/packages/incremental-merkle-tree.sol",
     "author": {
-        "name": "Omar Desogus",
+        "name": "Cedoor",
         "email": "me@cedoor.dev",
         "url": "https://cedoor.dev"
     },
