--- a/packages/rollup-plugin-rust/package.json
+++ b/packages/rollup-plugin-rust/package.json
@@ -17,7 +17,7 @@
     "repository": "git@github.com:privacy-scaling-explorations/zk-kit.git",
     "homepage": "https://github.com/privacy-scaling-explorations/zk-kit/tree/main/packages/rollup-plugin-rust",
     "author": {
-        "name": "Omar Desogus",
+        "name": "Cedoor",
         "email": "me@cedoor.dev",
         "url": "https://cedoor.dev"
     },
