--- a/packages/sparse-merkle-tree/package.json
+++ b/packages/sparse-merkle-tree/package.json
@@ -25,7 +25,7 @@
     "repository": "git@github.com:privacy-scaling-explorations/zk-kit.git",
     "homepage": "https://github.com/privacy-scaling-explorations/zk-kit/tree/main/packages/sparse-merkle-tree",
     "author": {
-        "name": "Omar Desogus",
+        "name": "Cedoor",
         "email": "me@cedoor.dev",
         "url": "https://cedoor.dev"
     },
