--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
     "name": "zk-kit",
     "description": "A monorepo of reusable JS libraries for zero-knowledge technologies.",
+    "version": "0.1.1",
     "license": "MIT",
     "repository": "git@github.com:privacy-scaling-explorations/zk-kit.git",
     "homepage": "https://github.com/privacy-scaling-explorations/zk-kit",
