--- a/package.json
+++ b/package.json
@@ -8,15 +8,17 @@
     "bugs": "https://github.com/privacy-scaling-explorations/zk-kit/issues",
     "private": true,
     "scripts": {
-        "build": "yarn workspaces foreach run build",
-        "test": "jest --coverage",
-        "test:watch": "jest --coverage --watch",
-        "test:all": "yarn workspaces foreach run test",
-        "lint": "eslint . --ext .js,.ts",
+        "build": "yarn build:js && yarn compile:sol",
+        "build:js": "yarn workspaces foreach --no-private run build",
+        "compile:sol": "yarn workspaces foreach --no-private run compile",
+        "test": "yarn test:js && yarn test:sol",
+        "test:js": "jest --coverage",
+        "test:sol": "yarn workspace incremental-merkle-tree.sol test:coverage",
+        "lint": "eslint . --ext .js,.ts && yarn workspace incremental-merkle-tree.sol lint",
         "prettier": "prettier -c .",
         "prettier:write": "prettier -w .",
         "benchmarks": "rimraf benchmarks/results && ts-node benchmarks/index.ts",
-        "docs": "yarn workspaces foreach run docs",
+        "docs": "yarn workspaces foreach --no-private run docs",
         "commit": "cz",
         "precommit": "lint-staged",
         "postinstall": "yarn build"
