--- a/.github/workflows/docs.yml
+++ b/.github/workflows/docs.yml
@@ -10,20 +10,21 @@ jobs:
         runs-on: ubuntu-latest
 
         steps:
-            - uses: actions/checkout@v2
+            - name: Checkout
+              uses: actions/checkout@v3
 
-            - name: Install Node.js
-              uses: actions/setup-node@v1
+            - name: Setup Node
+              uses: actions/setup-node@v3
               with:
-                  node-version: 16.x
+                  node-version: "18"
+                  cache: yarn
 
             - name: Get yarn cache directory path
               id: yarn-cache-dir-path
-              run: echo "::set-output name=dir::$(yarn config get cacheFolder)"
+              run: echo "dir=$(yarn config get cacheFolder)" >> $GITHUB_OUTPUT
 
-            - name: Restore yarn cache
-              uses: actions/cache@v3
-              id: yarn-cache
+            - uses: actions/cache@v3
+              id: yarn-cache # use this to check for `cache-hit` (`steps.yarn-cache.outputs.cache-hit != 'true'`)
               with:
                   path: ${{ steps.yarn-cache-dir-path.outputs.dir }}
                   key: ${{ runner.os }}-yarn-${{ hashFiles('**/yarn.lock') }}
