--- a/packages/incremental-merkle-tree.sol/contracts/package.json
+++ b/packages/incremental-merkle-tree.sol/contracts/package.json
@@ -27,5 +27,8 @@
     },
     "publishConfig": {
         "access": "public"
+    },
+    "dependencies": {
+        "poseidon-solidity": "0.0.3"
     }
 }
