--- a/packages/incremental-merkle-tree.sol/package.json
+++ b/packages/incremental-merkle-tree.sol/package.json
@@ -12,25 +12,30 @@
         "lint": "solhint 'contracts/**/*.sol'"
     },
     "devDependencies": {
-        "@nomiclabs/hardhat-ethers": "^2.0.4",
-        "@nomiclabs/hardhat-waffle": "^2.0.2",
-        "@types/chai": "^4.3.0",
-        "@types/mocha": "^9.1.0",
+        "@ethersproject/providers": "^5.4.7",
+        "@nomicfoundation/hardhat-chai-matchers": "^1.0.0",
+        "@nomicfoundation/hardhat-network-helpers": "^1.0.0",
+        "@nomicfoundation/hardhat-toolbox": "^2.0.2",
+        "@nomiclabs/hardhat-ethers": "^2.0.0",
+        "@nomiclabs/hardhat-etherscan": "^3.0.0",
+        "@typechain/ethers-v5": "^10.1.0",
+        "@typechain/hardhat": "^6.1.2",
+        "@types/chai": "^4.2.0",
+        "@types/mocha": ">=9.1.0",
         "@zk-kit/incremental-merkle-tree": "^0.4.1",
-        "chai": "^4.3.5",
         "circomlibjs": "^0.0.8",
         "dotenv": "^14.3.2",
-        "ethereum-waffle": "^3.4.4",
-        "ethers": "^5.5.3",
-        "hardhat": "^2.8.3",
-        "hardhat-gas-reporter": "^1.0.7",
-        "mocha": "^8.4.0",
-        "poseidon-solidity": "0.0.3",
-        "prettier": "^2.5.1",
+        "ethers": "^5.4.7",
+        "hardhat": "^2.13.0",
+        "hardhat-gas-reporter": "^1.0.8",
         "prettier-plugin-solidity": "^1.0.0-beta.19",
         "solhint": "^3.3.6",
         "solhint-plugin-prettier": "^0.0.5",
-        "solidity-coverage": "^0.7.18"
+        "solidity-coverage": "^0.8.1",
+        "typechain": "^8.1.0"
+    },
+    "dependencies": {
+        "poseidon-solidity": "0.0.3"
     },
     "config": {
         "solidity": {
