--- a/.github/workflows/production.yml
+++ b/.github/workflows/production.yml
@@ -17,6 +17,7 @@ jobs:
               uses: actions/setup-node@v3
               with:
                   node-version: "18"
+                  cache: yarn
 
             - name: Get yarn cache directory path
               id: yarn-cache-dir-path
@@ -54,10 +55,14 @@ jobs:
                     - sol
 
         steps:
+            - name: Checkout
+              uses: actions/checkout@v3
+
             - name: Setup Node
               uses: actions/setup-node@v3
               with:
                   node-version: "18"
+                  cache: yarn
 
             - name: Get yarn cache directory path
               id: yarn-cache-dir-path
