--- a/.github/workflows/pull-requests.yml
+++ b/.github/workflows/pull-requests.yml
@@ -15,6 +15,7 @@ jobs:
               uses: actions/setup-node@v3
               with:
                   node-version: "18"
+                  cache: yarn
 
             - name: Get yarn cache directory path
               id: yarn-cache-dir-path
@@ -47,10 +48,14 @@ jobs:
         runs-on: ubuntu-latest
 
         steps:
+            - name: Checkout
+              uses: actions/checkout@v3
+
             - name: Setup Node
               uses: actions/setup-node@v3
               with:
                   node-version: "18"
+                  cache: yarn
 
             - name: Get yarn cache directory path
               id: yarn-cache-dir-path
