--- a/packages/hashtower/package.json
+++ b/packages/hashtower/package.json
@@ -34,10 +34,12 @@
         "access": "public"
     },
     "devDependencies": {
-        "poseidon-lite": "^0.2.0",
         "rollup-plugin-cleanup": "^3.2.1",
         "rollup-plugin-terser": "^7.0.2",
         "rollup-plugin-typescript2": "^0.32.1",
         "typedoc": "^0.22.11"
+    },
+    "dependencies": {
+        "poseidon-lite": "^0.2.0"
     }
 }
